<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.andretrindade.batatas.ShoppingListActivity">

    <item
        android:id="@+id/shopping_list_menu_new_item"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/new_item"
        app:showAsAction="always" />

    <item
        android:id="@+id/shopping_list_menu_reload"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/reload"
        app:showAsAction="always" />

    <item
        android:id="@+id/shopping_list_menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/shopping_list_check_bill"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/list_check_bill"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/shopping_list_check_product"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:title="@string/list_check_product"
        app:showAsAction="ifRoom" />

</menu>
